# k8s-resource-timeline

./: Cargo.toml  README.md
assets/: main.html
src/: main.rs  routes.rs  stream.rs  watcher.rs
templates/: main.html
